public interface ContenidoDescargable {

    public double descargar();

    boolean void verificarEspacioRequerido(double espacioDisponible);
}