package com.github.badjavii.p04_Extras;

public enum ResolutionType {
    HD,
    _4K
}